--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-21
 android.library.reference.1=..\\appcompat_v7
 android.library=false
+android.library.reference.2=../../Desktop/Android-PullToRefresh-master/Android-PullToRefresh-master/extras/PullToRefreshListFragment
